test/lattests/extensions/objects1/bad/duplicateParameters.lat
class a {
    void foo(int x, int x) {}
}